--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -40,8 +40,8 @@ Resources:
       Role: !GetAtt Infrastructure.Outputs.LambdaRoleArn
       Environment:
         Variables:
-          USER_POOL_ID: !GetAtt Infrastructure.Outputs.UserPoolArn
-          CLIENT_ID: !GetAtt Infrastructure.Outputs.ClientId
+          USER_POOL_ID: !GetAtt Data.Outputs.UserPoolId
+          CLIENT_ID: !GetAtt Data.Outputs.ClientId
           ADMIN_COUNT: 1
           PLAYER_COUNT: 3
           TEST_USER_PASSWORD: !Ref TestUserPassword
@@ -68,8 +68,6 @@ Resources:
       Parameters:
         LambdaRoleArn: !GetAtt Infrastructure.Outputs.LambdaRoleArn
         Database: !GetAtt Data.Outputs.Database
-        TeamDeletedTopic: !GetAtt Infrastructure.Outputs.TeamDeletedTopic
-        TeamUpdatedTopic: !GetAtt Infrastructure.Outputs.TeamUpdatedTopic
         UserPoolArn: !GetAtt Data.Outputs.UserPoolArn
         Env: !Ref Env
 
@@ -80,8 +78,6 @@ Resources:
       Parameters:
         LambdaRoleArn: !GetAtt Infrastructure.Outputs.LambdaRoleArn
         Database: !GetAtt Data.Outputs.Database
-        TournamentDeletedTopic: !GetAtt Infrastructure.Outputs.TournamentDeletedTopic
-        TournamentUpdatedTopic: !GetAtt Infrastructure.Outputs.TournamentUpdatedTopic
         UserPoolArn: !GetAtt Data.Outputs.UserPoolArn
         Env: !Ref Env
 
@@ -92,10 +88,7 @@ Resources:
       Parameters:
         LambdaRoleArn: !GetAtt Infrastructure.Outputs.LambdaRoleArn
         Database: !GetAtt Data.Outputs.Database
-        TeamUpdatedTopic: !GetAtt Infrastructure.Outputs.TeamUpdatedTopic
-        TournamentUpdatedTopic: !GetAtt Infrastructure.Outputs.TournamentUpdatedTopic
-        TeamDeletedTopic: !GetAtt Infrastructure.Outputs.TeamDeletedTopic
-        TournamentDeletedTopic: !GetAtt Infrastructure.Outputs.TournamentDeletedTopic
+        DatabaseStreamArn: !GetAtt Data.Outputs.DatabaseStreamArn
         UserPoolArn: !GetAtt Data.Outputs.UserPoolArn
         Env: !Ref Env
 
