--- a/sam.match.yaml
+++ b/sam.match.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: "AWS::Serverless-2016-10-31"
-Description: "Foci 2020 Tournament API"
+Description: "Foci 2020 Match API"
 Parameters:
   LambdaRoleArn:
     Type: String
@@ -28,10 +28,10 @@ Globals:
         DYNAMO_TABLE: !Ref Database
 
 Resources:
-  TournamentApi:
+  MatchApi:
     Type: AWS::Serverless::Api
     Properties:
-      Name: !Sub Foci2020-${Env}-Tournament
+      Name: !Sub Foci2020-${Env}-Match
       StageName: Prod
       TracingEnabled: true
       Auth:
@@ -44,87 +44,119 @@ Resources:
           ResponseTemplates:
             application/json: '{ "message": $context.error.messageString }'
 
-  CreateTournament:
+  CreateMatch:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-CreateTournament
-      CodeUri: ./dist/create-tournament
+      FunctionName: !Sub Foci2020-${Env}-CreateMatch
+      CodeUri: api/dist/create-match
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TournamentApi
-            Path: /tournament/v1/tournaments
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches
             Method: POST
             Auth:
               Authorizer: CognitoAuthorizer
 
-  UpdateTournament:
+  PlaceBet:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-UpdateTournament
-      CodeUri: ./dist/update-tournament
+      FunctionName: !Sub Foci2020-${Env}-PlaceBet
+      CodeUri: api/dist/place-bet
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TournamentApi
-            Path: /tournament/v1/tournaments/{tournamentId}
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches/{matchId}/bets
+            Method: POST
+            Auth:
+              Authorizer: CognitoAuthorizer
+
+  ListBetsOfMatch:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub Foci2020-${Env}-ListBetsOfMatch
+      CodeUri: api/dist/list-bets-of-match
+      Role: !Ref LambdaRoleArn
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches/{matchId}/bets
+            Method: GET
+            Auth:
+              Authorizer: CognitoAuthorizer
+
+  UpdateMatch:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub Foci2020-${Env}-UpdateMatch
+      CodeUri: api/dist/update-match
+      Role: !Ref LambdaRoleArn
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches/{matchId}
             Method: PUT
             Auth:
               Authorizer: CognitoAuthorizer
 
-  ListTournaments:
+  ListMatches:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-ListTournaments
-      CodeUri: ./dist/list-tournaments
+      FunctionName: !Sub Foci2020-${Env}-ListMatches
+      CodeUri: api/dist/list-matches
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TournamentApi
-            Path: /tournament/v1/tournaments
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
 
-  GetTournament:
+  GetMatch:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-GetTournament
-      CodeUri: ./dist/get-tournament
+      FunctionName: !Sub Foci2020-${Env}-GetMatch
+      CodeUri: api/dist/get-match
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TournamentApi
-            Path: /tournament/v1/tournaments/{tournamentId}
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches/{matchId}
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
 
-  DeleteTournament:
+  DeleteMatch:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-DeleteTournament
-      CodeUri: ./dist/delete-tournament
+      FunctionName: !Sub Foci2020-${Env}-DeleteMatch
+      CodeUri: api/dist/delete-match
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TournamentApi
-            Path: /tournament/v1/tournaments/{tournamentId}
+            RestApiId: !Ref MatchApi
+            Path: /match/v1/matches/{matchId}
             Method: DELETE
             Auth:
               Authorizer: CognitoAuthorizer
-
+            
 Outputs:
-  TournamentApi:
-    Description: "Foci 2020 Tournament API"
-    Value: !Sub "${TournamentApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
+  MatchApi:
+    Description: "Foci 2020 Match API"
+    Value: !Sub "${MatchApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
