--- a/sam.tournament.yaml
+++ b/sam.tournament.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: "AWS::Serverless-2016-10-31"
-Description: "Foci 2020 Team Api"
+Description: "Foci 2020 Tournament API"
 Parameters:
   LambdaRoleArn:
     Type: String
@@ -28,10 +28,10 @@ Globals:
         DYNAMO_TABLE: !Ref Database
 
 Resources:
-  TeamApi:
+  TournamentApi:
     Type: AWS::Serverless::Api
     Properties:
-      Name: !Sub Foci2020-${Env}-Team
+      Name: !Sub Foci2020-${Env}-Tournament
       StageName: Prod
       TracingEnabled: true
       Auth:
@@ -44,87 +44,87 @@ Resources:
           ResponseTemplates:
             application/json: '{ "message": $context.error.messageString }'
 
-  CreateTeam:
+  CreateTournament:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-CreateTeam
-      CodeUri: ./dist/create-team
+      FunctionName: !Sub Foci2020-${Env}-CreateTournament
+      CodeUri: api/dist/create-tournament
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /team/v1/teams
+            RestApiId: !Ref TournamentApi
+            Path: /tournament/v1/tournaments
             Method: POST
             Auth:
               Authorizer: CognitoAuthorizer
 
-  UpdateTeam:
+  UpdateTournament:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-UpdateTeam
-      CodeUri: ./dist/update-team
+      FunctionName: !Sub Foci2020-${Env}-UpdateTournament
+      CodeUri: api/dist/update-tournament
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /team/v1/teams/{teamId}
+            RestApiId: !Ref TournamentApi
+            Path: /tournament/v1/tournaments/{tournamentId}
             Method: PUT
             Auth:
               Authorizer: CognitoAuthorizer
 
-  ListTeams:
+  ListTournaments:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-ListTeams
-      CodeUri: ./dist/list-teams
+      FunctionName: !Sub Foci2020-${Env}-ListTournaments
+      CodeUri: api/dist/list-tournaments
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /team/v1/teams
+            RestApiId: !Ref TournamentApi
+            Path: /tournament/v1/tournaments
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
 
-  GetTeam:
+  GetTournament:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-GetTeam
-      CodeUri: ./dist/get-team
+      FunctionName: !Sub Foci2020-${Env}-GetTournament
+      CodeUri: api/dist/get-tournament
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /team/v1/teams/{teamId}
+            RestApiId: !Ref TournamentApi
+            Path: /tournament/v1/tournaments/{tournamentId}
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
 
-  DeleteTeam:
+  DeleteTournament:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-DeleteTeam
-      CodeUri: ./dist/delete-team
+      FunctionName: !Sub Foci2020-${Env}-DeleteTournament
+      CodeUri: api/dist/delete-tournament
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /team/v1/teams/{teamId}
+            RestApiId: !Ref TournamentApi
+            Path: /tournament/v1/tournaments/{tournamentId}
             Method: DELETE
             Auth:
               Authorizer: CognitoAuthorizer
 
 Outputs:
-  TeamApi:
-    Description: "Foci 2020 Team API"
-    Value: !Sub "${TeamApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
+  TournamentApi:
+    Description: "Foci 2020 Tournament API"
+    Value: !Sub "${TournamentApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
