--- a/sam.betting.yaml
+++ b/sam.betting.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: "AWS::Serverless-2016-10-31"
-Description: "Foci 2020 Team Api"
+Description: "Foci 2020 Betting API"
 Parameters:
   LambdaRoleArn:
     Type: String
@@ -28,11 +28,11 @@ Globals:
         DYNAMO_TABLE: !Ref Database
 
 Resources:
-  TeamApi:
+  BettingApi:
     Type: AWS::Serverless::Api
     Properties:
-      Name: !Sub Foci2020-${Env}-Team
-      StageName: team
+      Name: !Sub Foci2020-${Env}-Betting
+      StageName: betting
       TracingEnabled: true
       Auth:
         Authorizers:
@@ -44,87 +44,55 @@ Resources:
           ResponseTemplates:
             application/json: '{ "message": $context.error.messageString }'
 
-  CreateTeam:
+  PlaceBet:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-Team-CreateTeam
-      CodeUri: api/dist/create-team
+      FunctionName: !Sub Foci2020-${Env}-Betting-PlaceBet
+      CodeUri: api/dist/place-bet
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /v1/teams
+            RestApiId: !Ref BettingApi
+            Path: /v1/matches/{matchId}/bets
             Method: POST
             Auth:
               Authorizer: CognitoAuthorizer
 
-  UpdateTeam:
+  ListBetsOfMatch:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-Team-UpdateTeam
-      CodeUri: api/dist/update-team
+      FunctionName: !Sub Foci2020-${Env}-Betting-ListBetsOfMatch
+      CodeUri: api/dist/list-bets-of-match
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /v1/teams/{teamId}
-            Method: PUT
-            Auth:
-              Authorizer: CognitoAuthorizer
-
-  ListTeams:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: !Sub Foci2020-${Env}-Team-ListTeams
-      CodeUri: api/dist/list-teams
-      Role: !Ref LambdaRoleArn
-      Events:
-        API:
-          Type: Api
-          Properties:
-            RestApiId: !Ref TeamApi
-            Path: /v1/teams
+            RestApiId: !Ref BettingApi
+            Path: /v1/matches/{matchId}/bets
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
 
-  GetTeam:
+  ListMatchesOfTournament:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub Foci2020-${Env}-Team-GetTeam
-      CodeUri: api/dist/get-team
+      FunctionName: !Sub Foci2020-${Env}-Betting-ListMatchesOfTournament
+      CodeUri: api/dist/list-matches-of-tournament
       Role: !Ref LambdaRoleArn
       Events:
         API:
           Type: Api
           Properties:
-            RestApiId: !Ref TeamApi
-            Path: /v1/teams/{teamId}
+            RestApiId: !Ref BettingApi
+            Path: /v1/tournaments/{tournamentId}/matches
             Method: GET
             Auth:
               Authorizer: CognitoAuthorizer
-
-  DeleteTeam:
-    Type: AWS::Serverless::Function
-    Properties:
-      FunctionName: !Sub Foci2020-${Env}-Team-DeleteTeam
-      CodeUri: api/dist/delete-team
-      Role: !Ref LambdaRoleArn
-      Events:
-        API:
-          Type: Api
-          Properties:
-            RestApiId: !Ref TeamApi
-            Path: /v1/teams/{teamId}
-            Method: DELETE
-            Auth:
-              Authorizer: CognitoAuthorizer
-
+ 
 Outputs:
-  TeamApi:
-    Description: "Foci 2020 Team API"
-    Value: !Sub "${TeamApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
+  BettingApi:
+    Description: "Foci 2020 Betting API"
+    Value: !Sub "${BettingApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}"
